backend/error_log.txt
file:///C:/Users/sarth/OneDrive/Desktop/web%20project/roomgi/roomgi-hackathon/backend/models/property.model.js:6
import mongoose, { Schema } from "mongoose";
^^^^^^^^^^^^^^^

SyntaxError: Identifier 'mongoose' has already been declared
    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:102:18)
    at #translate (node:internal/modules/esm/loader:468:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:515:27)

Node.js v22.14.0
